# swc-dev

./: Cargo.toml  README.md
.github/workflows/: publish.yml
arch/: Cargo.toml
arch/src/: lib.rs
src/: main.rs
src/plugin/: artifacts.rs  build.rs  init.rs  mod.rs  package.rs  publish.rs  upgrade_deps.rs
src/plugin/package/: mod.rs  package_json.rs
src/plugin/publish/: base.rs  mod.rs
src/util/: mod.rs
src/util/cargo/: add.rs  mod.rs  upgrade.rs
src/util/node/: mod.rs  platform.rs
templates/new-plugin/: .gitignore  Cargo.toml
